tests/lazy_node_modules/lazy_node_modules.exp
Error ------------------------------------------- node_modules/foo/index.js:3:17

Error: node_modules/foo/index.js:3
  3: var x: string = 123; // This error shows up since this file is a dependency
                     ^^^ Cannot assign `123` to `x` because number [1] is incompatible with string [2].
  References:
    3: var x: string = 123; // This error shows up since this file is a dependency
                       ^^^ [1]: number
    3: var x: string = 123; // This error shows up since this file is a dependency
              ^^^^^^ [2]: string


Found 1 error
